--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./Style/style.css" />
+    <link rel="manifest" href="./manifest.json" />
   </head>
   <body>
     <div class="card">
@@ -52,7 +53,64 @@
         </div>
       </div>
     </div>
+    <p
+      style="
+        text-align: center;
+        background: linear-gradient(135deg, #00feba, #5b548a);
+        width: fit-content;
+        margin: 0 auto;
+        border-radius: 20px;
+        padding: 5px;
+        color: #ebfffc;
+      "
+      xmlns:cc="http://creativecommons.org/ns#"
+      xmlns:dct="http://purl.org/dc/terms/"
+    >
+      <span property="dct:title">Weather App</span> by
+      <a
+        style="text-decoration: none"
+        rel="cc:attributionURL dct:creator"
+        property="cc:attributionName"
+        href="https://github.com/elsa33eed"
+        >Mohamed Saeed</a
+      >
+      is marked with
+      <a
+        style="text-decoration: none"
+        href="http://creativecommons.org/publicdomain/zero/1.0?ref=chooser-v1"
+        target="_blank"
+        rel="license noopener noreferrer"
+        style="display: inline-block"
+        >CC0 1.0 Universal<img
+          style="
+            height: 22px !important;
+            margin-left: 3px;
+            vertical-align: text-bottom;
+          "
+          src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" /><img
+          style="
+            height: 22px !important;
+            margin-left: 3px;
+            vertical-align: text-bottom;
+          "
+          src="https://mirrors.creativecommons.org/presskit/icons/zero.svg?ref=chooser-v1"
+      /></a>
+    </p>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="./javascript/main.js"></script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker
+            .register("./javascript/service-worker.js")
+            .then((registration) => {
+              console.log("Service Worker registered:", registration);
+            })
+            .catch((error) => {
+              console.error("Service Worker registration failed:", error);
+            });
+        });
+      }
+    </script>
   </body>
 </html>
